--- a/_includes/tripleday.html
+++ b/_includes/tripleday.html
@@ -11,50 +11,51 @@
             {%- else -%}
                 {%- assign url_tripleday = 'en' -%}
             {%- endif -%}
-            {%- assign now_tripleday = 'now' | date: '%s' -%}
-            {%- assign now_tripleday2 = 'now' | date: '%s' | minus: 86400 -%}
+
+            {%- assign now_tripleday1 = 'now' | date: '%s' | minus: 86400 -%}
+            {%- assign now_tripleday2 = 'now' | date: '%s' -%}
             {%- assign now_tripleday3 = 'now' | date: '%s' | plus: 86400 -%}
-            {%- capture year_tripleday -%}{{ site.data.langs[url_tripleday].calendar_on_3 }}{%- endcapture -%}
+            {%- assign year_tripleday = site.data.langs[url_tripleday].calendar_on_3 -%}
 
             <div class="card border-warning">
                 <div class="card-header bg-warning">{{ site.data.langs[url_tripleday].yesterday }}</div>
                 <div class="card-body">
-                    {%- include config.html item1=now_tripleday2 -%}
+                    {%- include config.html item1=now_tripleday1 -%}
                     {%- assign w_tripleday = w_config2 | downcase -%}
-                    <p class="card-text mb-0"><small class="text-muted">📆 {{ now_tripleday2 | date: ' %d, %Y' | prepend: m_config2 | append: year_tripleday | append: ', ' | append: w_tripleday }}</small></p>
-                    {%- assign without_date_tripleday2 = true -%}
-                    {%- for now_dates_tripleday4 in site.posts -%}
-                        {%- assign now_dates_tripleday5 = now_dates_tripleday4.date | date: '%d, %Y' -%}
-                        {%- assign now_dates_tripleday6 = now_tripleday2 | date: '%d, %Y' -%}
-                        {%- if now_dates_tripleday5 == now_dates_tripleday6 and now_dates_tripleday4.slug == url_tripleday or now_dates_tripleday4.slug == null -%}
-                    <a href="{{ now_dates_tripleday4.url | relative_url }}" class="text-dark">{{ now_dates_tripleday4.title }}</a>
-                            {%- assign without_date_tripleday2 = false -%}
-                        {%- endif -%}
-                        {%- if without_date_tripleday2 -%}
-                            {{ site.data.langs[url_tripleday].without_date }}
+                    <p class="card-text mb-0"><small class="text-muted">📆 {{ now_tripleday1 | date: ' %d, %Y' | prepend: m_config2 | append: year_tripleday | append: ', ' | append: w_tripleday }}</small></p>
+                    {%- assign without_date_tripleday1 = true -%}
+                    {%- for now_dates_tripleday1 in site.posts -%}
+                        {%- assign now_dates_tripleday11 = now_dates_tripleday1.date | date: '%m-%d' -%}
+                        {%- assign now_dates_tripleday12 = now_tripleday1 | date: '%m-%d' -%}
+                        {%- if now_dates_tripleday11 == now_dates_tripleday12 and now_dates_tripleday1.slug == url_tripleday or now_dates_tripleday1.slug == null -%}
+                    <a href="{{ now_dates_tripleday1.url | relative_url }}" class="text-dark">{{ now_dates_tripleday1.title }}</a>
+                            {%- assign without_date_tripleday1 = false -%}
                         {%- endif -%}
                     {%- endfor -%}
+                    {%- if without_date_tripleday1 -%}
+                        {{ site.data.langs[url_tripleday].without_date }}
+                    {%- endif -%}
                 </div>
             </div>
 
             <div class="card border-warning">
                 <div class="card-header bg-warning">{{ site.data.langs[url_tripleday].today }}</div>
                 <div class="card-body">
-                    {%- include config.html item1=now_tripleday -%}
+                    {%- include config.html item1=now_tripleday2 -%}
                     {%- assign w_tripleday = w_config2 | downcase -%}
-                    <p class="card-text mb-0"><small class="text-muted">📆 {{ now_tripleday | date: ' %d, %Y' | prepend: m_config2 | append: year_tripleday | append: ', ' | append: w_tripleday }}</small></p>
-                    {%- assign without_date_tripleday = true -%}
-                    {%- for now_dates_tripleday in site.posts -%}
-                        {%- assign now_dates_tripleday2 = now_dates_tripleday.date | date: '%d, %Y' -%}
-                        {%- assign now_dates_tripleday3 = now_tripleday | date: '%d, %Y' -%}
-                        {%- if now_dates_tripleday2 == now_dates_tripleday3 and now_dates_tripleday.slug == url_tripleday or now_dates_tripleday.slug == null -%}
-                    <a href="{{ now_dates_tripleday.url | relative_url }}" class="text-dark">{{ now_dates_tripleday.title }}</a>
-                            {%- assign without_date_tripleday = false -%}
-                        {%- endif -%}
-                        {%- if without_date_tripleday -%}
-                            {{ site.data.langs[url_tripleday].without_date }}
+                    <p class="card-text mb-0"><small class="text-muted">📆 {{ now_tripleday2 | date: ' %d, %Y' | prepend: m_config2 | append: year_tripleday | append: ', ' | append: w_tripleday }}</small></p>
+                    {%- assign without_date_tripleday2 = true -%}
+                    {%- for now_dates_tripleday2 in site.posts -%}
+                        {%- assign now_dates_tripleday21 = now_dates_tripleday2.date | date: '%m-%d' -%}
+                        {%- assign now_dates_tripleday22 = now_tripleday2 | date: '%m-%d' -%}
+                        {%- if now_dates_tripleday21 == now_dates_tripleday22 and now_dates_tripleday2.slug == url_tripleday or now_dates_tripleday2.slug == null -%}
+                    <a href="{{ now_dates_tripleday2.url | relative_url }}" class="text-dark">{{ now_dates_tripleday2.title }}</a>
+                            {%- assign without_date_tripleday2 = false -%}
                         {%- endif -%}
                     {%- endfor -%}
+                    {%- if without_date_tripleday2 -%}
+                        {{ site.data.langs[url_tripleday].without_date }}
+                    {%- endif -%}
                 </div>
             </div>
 
@@ -65,17 +66,17 @@
                     {%- assign w_tripleday = w_config2 | downcase -%}
                     <p class="card-text mb-0"><small class="text-muted">📆 {{ now_tripleday3 | date: ' %d, %Y' | prepend: m_config2 | append: year_tripleday | append: ', ' | append: w_tripleday }}</small></p>
                     {%- assign without_date_tripleday3 = true -%}
-                    {%- for now_dates_tripleday7 in site.posts -%}
-                        {%- assign now_dates_tripleday8 = now_dates_tripleday7.date | date: '%d, %Y' -%}
-                        {%- assign now_dates_tripleday9 = now_tripleday3 | date: '%d, %Y' -%}
-                        {%- if now_dates_tripleday8 == now_dates_tripleday9 and now_dates_tripleday7.slug == url_tripleday or now_dates_tripleday7.slug == null -%}
-                    <a href="{{ now_dates_tripleday7.url | relative_url }}" class="text-dark">{{ now_dates_tripleday7.title }}</a>
+                    {%- for now_dates_tripleday3 in site.posts -%}
+                        {%- assign now_dates_tripleday31 = now_dates_tripleday3.date | date: '%m-%d' -%}
+                        {%- assign now_dates_tripleday32 = now_tripleday3 | date: '%m-%d' -%}
+                        {%- if now_dates_tripleday31 == now_dates_tripleday32 and now_dates_tripleday3.slug == url_tripleday or now_dates_tripleday3.slug == null -%}
+                    <a href="{{ now_dates_tripleday3.url | relative_url }}" class="text-dark">{{ now_dates_tripleday3.title }}</a>
                             {%- assign without_date_tripleday3 = false -%}
                         {%- endif -%}
-                        {%- if without_date_tripleday3 -%}
-                            {{ site.data.langs[url_tripleday].without_date }}
-                        {%- endif -%}
                     {%- endfor -%}
+                    {%- if without_date_tripleday3 -%}
+                        {{ site.data.langs[url_tripleday].without_date }}
+                    {%- endif -%}
                 </div>
             </div>
 
