--- a/_includes/config.html
+++ b/_includes/config.html
@@ -12,7 +12,7 @@
 {%- elsif page.slug -%}
     {%- assign url_config = page.slug -%}
 {%- else -%}
-    {%- assign url_config = 'en' -%}
+    {%- assign url_config = site.default_lang -%}
 {%- endif -%}
 
 {% comment %}
