--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
         {%- elsif page.slug -%}
             {%- assign url_navbar = page.slug -%}
         {%- else -%}
-            {%- assign url_navbar = 'en' -%}
+            {%- assign url_navbar = site.default_lang -%}
         {%- endif -%}
 
         <a class="navbar-brand" href="{{ site.data.langs[url_navbar].icon | append: '/' | relative_url }}">📅 {{ site.data.langs[url_navbar].sitename }}</a>
