--- a/_includes/social.html
+++ b/_includes/social.html
@@ -12,6 +12,10 @@
 <meta property="og:title" content="{{ page.title | default: site.title | smartify }}">
 <meta property="og:description" content="{% if page.description %}{{ page.description }}{% elsif page.title %}{{ page.excerpt | strip_html | smartify }}{% else %}{{ site.description | smartify }}{% endif %}">
 <meta property="og:type" content="website">
+{% if page.date %}<meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">{% endif %}
+{% if page.author.name %}<meta property="article:author" content="{{ page.author.name }}">{% endif %}
+<meta property="article:section" content="Calendar">
+{% if page.category %}<meta property="article:tag" content="{{ page.category }}">{% endif %}
 <meta property="og:image" content="{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.image.large | absolute_url }}{% endif %}">
 <meta property="og:image:secure_url" content="{% if page.image %}{{ page.image | absolute_url }}{% else %}{{ site.image.large | absolute_url }}{% endif %}">
 <meta property="og:image:type" content="image/png">
